<resources>
    <string name="app_name">IT CRON</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_no_internet_connection">Нет интернет соединения</string>
    <string name="title_fragment_first">Проектный подход</string>
    <string name="description_fragment_first">Качественно организовываем деятельность для заимодействия наших сотрудников и Заказчика</string>
    <string name="text_btn_next_page">Далее</string>
    <string name="title_fragment_second">Продуктовый подход</string>
    <string name="description_fragment_second">Оказываем услуги\nи выдаём тот результат, который необходим Заказчику и рынку</string>
    <string name="title_fragment_third">Кейсы</string>
    <string name="description_fragment_third">Понравился продукт? Хотите его обсудить? Мы с радостью\nответим на все ваши вопросы :)</string>
    <string name="text_btn_start_page">Начать</string>
    <string name="text_is_null_binding_first_fragment">FragmentFirstBinding is null</string>
    <string name="text_is_null_binding_second_fragment">FragmentSecondBinding is null</string>
    <string name="text_is_null_binding_third_fragment">FragmentThirdBinding is null</string>
    <string name="text_is_null_binding_main_fragment">FragmentMainBinding is null</string>
    <string name="text_is_null_binding_no_internet_fragment">
        FragmentNoInternetBinding is null
    </string>
    <string name="text_is_null_binding_view_pager_fragment">
        FragmentViewPagerBinding is null
    </string>
    <string name="text_error_no_implements_interface">
        Must implements interface NavigateHelper
    </string>
    <string name="text_key_shared_preferences_on_boarding">
        onBoarding
    </string>
    <string name="text_extra_finished_on_boarding">
        Finished
    </string>
    <string name="text_id_app_facebook">com.facebook.katana</string>
    <string name="text_id_app_instagram">com.instagram.android</string>
    <string name="text_id_app_telegram">org.telegram.messenger</string>
    <string name="text_link_facebook">https://www.facebook.com/it.cron.ru/</string>
    <string name="text_link_instagram">https://www.instagram.com/itcron/?hl=ru</string>
    <string name="text_link_telegram"> https://t.me/+NnhpGqJYWAU2MDIy</string>
    <string name="text_is_null_binding_view_list_case_fragment">
        FragmentListCaseBinding is null
    </string>
    <string name="text_is_null_binding_view_list_filter_fragment">
        ListFilterFragment is null
    </string>
    <string name="text_extra_filters">
        filters
    </string>
    <string name="extra_saved_filters">
        filters_saved
    </string>
    <string name="text_is_null_binding_view_detail_case_fragment">
        FragmentCaseDetailBinding is null
    </string>
    <string name="text_is_null_binding_view_screenshot_list_fragment">
        FragmentScreenshotListBinding is null
    </string>
    <string name="default_color">
        69488D
    </string>
    <string name="text_is_null_binding_view_company_fragment">
        FragmentCompanyBinding is null
    </string>
    <string name="text_is_null_binding_view_send_form_fragment">
        FragmentSendFormBinding is null
    </string>
    <string name="text_is_null_binding_view_contact_fragment">
        FragmentContactBinding is null
    </string>
    <string name="text_is_null_binding_view_review_list_fragment">
        FragmentReviewListBinding is null
    </string>
    <string name="text_header_slogan">Проектно-продуктовый подход\nк оказанию IT-услуг</string>
    <string name="text_cases">Кейсы</string>
    <string name="text_company">Компания</string>
    <string name="text_services">Услуги</string>
    <string name="text_contacts">Контакты</string>
    <string name="text_email_company">hello@it-cron.ru</string>
    <string name="text_send_request">Оставить заявку</string>
    <string name="text_title_appbar">Кейсы</string>
    <string name="text_filter_appbar">Фильтр</string>
    <string name="text_title_appbar_filter">Фильтры</string>
    <string name="text_no_search_results_found">По вашему запросу ничего\nне найдено.</string>
    <string name="text_title_appbar_detail_case">Кейс</string>
    <string name="text_task">Задача</string>
    <string name="text_opportunities">Приложение позволяет</string>
    <string name="text_technological">Технология</string>
    <string name="text_platform">Платформа</string>
    <string name="text_get_it_on">Get it on</string>
    <string name="text_google_play">Google Play</string>
    <string name="text_download_on_the">Download on the</string>
    <string name="text_app_store">App Store</string>
    <string name="text_view_website">Посмотреть сайт</string>
    <string name="text_become_customer">Стать клиентом или\nпартнером!</string>
    <string name="text_next_case">Следующий кейс</string>
    <string name="text_go_back_to_main_page">Вернуться на Главную</string>
    <string name="text_screenshot">Splash</string>
    <string name="slogan_company">cron as expected</string>
    <string name="text_our_slogan">вот наш слоган</string>
    <string name="title_design_and_product">Проектно-\nпродуктовый</string>
    <string name="text_development_approach">подход к разработке\nпрограммного обеспечения</string>
    <string name="text_project">Проектный</string>
    <string name="text_description_project">
        Позволяет нам качественно\nорганизовать деятельность для\nвзаимодействия наших\nсотрудников и Заказчика
    </string>
    <string name="text_product">Продуктовый</string>
    <string name="text_description_product">
        Оказывать услуги и выдавать тот\nрезультат, который необходим\nЗаказчику и рынку
    </string>
    <string name="text_name_director">Пухов Александр Сергеевич</string>
    <string name="text_post_director">Учредитель и руководитель\nООО «АЙТИ КРОН»</string>
    <string name="text_about_origin_the_company">
        Несколько слов\nо зарождении и названии\nкомпании
    </string>
    <string name="text_description_the_company_first">
        У меня уже был опыт управления\nдругой компанией.\nВ этой компании было несколько\nпартнеров и несмотря на то,\nчто общее движение было\nсогласованным, некоторые\nреализации я видел по-другому.\nПоэтому в конце 2018 года\nя решил, что хочу реализовать свои\nидеи на все 100%.\nВ какой-то мере это был некий\nчелендж. Сейчас все идет по плану :)
    </string>
    <string name="text_description_the_company_second">
        По поводу названия. IT – очевидно,\nпотому что мы работаем в IT,\nа CRON – связано с Linux\nпланировщиком и это отсылка\nк тому, что мы работаем, как часы.\nМы предоставляем услуги точно\nв срок и с отличным качеством.\nНаш слоган – cron as expected ;)
    </string>
    <string name="text_information_about_cooperation">
        Мы сотрудничаем с клиентами,\nмыслящими на перспективу,\nчтобы трансформировать идеи\nв реальные продукты.
    </string>
    <string name="text_reviews_client">Отзывы клиентов</string>
    <string name="text_watch_all">Смотреть все</string>
    <string name="text_look_breathing">Взгляните чем мы дышим</string>
    <string name="title_link_facebook">Facebook</string>
    <string name="title_link_instagram">Instagram</string>
    <string name="title_link_telegram">Telegram</string>
    <string name="text_join_team">Присоединяйтесь к команде</string>
    <string name="text_send_portfolio">
        Таланты всегда приветствуются.\nОтправляй свое портфолио\nпо адресу
    </string>
    <string name="text_email_company_hr">hr@it-cron.ru</string>
    <string name="text_company_city">Россия, Москва</string>
    <string name="text_company_location">119330, ул. Мосфильмовская, 35</string>
    <string name="text_company_phone">+7 (495) 006-13-57</string>
    <string name="text_contact_via">Связаться через</string>
    <string name="text_application">Заявка</string>
    <string name="text_fill_brief">Заполните\nбриф</string>
    <string name="text_leave_request_call">Оставьте заявку, либо звоните,\nмы пообщаемся\nи сами все за вас заполним:</string>
    <string name="text_budget">Бюджет</string>
    <string name="hint_task_in_form">Описание</string>
    <string name="text_empty_task">Заполните поле</string>
    <string name="text_attach_file">Прикрепить файл</string>
    <string name="text_optional_attach_file">*Прикрепление файлов не\nобязательно</string>
    <string name="text_contact_information">Контактные данные</string>
    <string name="title_privacy_policy">Политика\nконфиденциальности</string>
    <string name="text_all_privacy_policy">ООО «АЙТИ КРОН», ОГРН 1195053004068, ИНН 5032302910 обязуется соблюдать конфиденциальность и безопасность Вашей личной информации. Данная политика конфиденциальности в Интернете («Политика конфиденциальности») описывает информацию, которую ООО «АЙТИ КРОН» собирает, когда Вы получаете доступ или используете мобильные и веб-приложения компании (далее "Сервисы") или онлайн и офлайн услуги, которые ООО «АЙТИ КРОН» предоставляет в связи с использованием Сервисов. При загрузке, доступе или с помощью Сервисов, или иным образом с использованием Услуг, Вы соглашаетесь с настоящей Политикой конфиденциальности. ООО «АЙТИ КРОН» может периодически обновлять настоящую политику конфиденциальности, чтобы отразить существенные изменения в том, как мы собираем, используем или храним Вашу личную или иную информацию. Мы рекомендуем вам следить за обновлениями данной политики конфиденциальности на постоянной основе, чтобы быть в курсе изменений. Вы соглашаетесь на любые изменения, которые мы вносим в данную политику конфиденциальности, если Вы по-прежнему осуществляете доступ или используете Сервисы, после получения уведомления об изменении или после нашего размещения новой политики конфиденциальности на ресурсах ООО «АЙТИ КРОН». Используемый в настоящей политике конфиденциальности термин "личная информация" означает информацию, которая позволила идентифицировать Вас, в том числе, например, Ваше полное имя, адрес, номер телефона и адрес электронной почты. Сбор информации Ниже перечислены типы собираемой информации: • Личная информация: чтобы воспользоваться сервисами и позволить нам связаться для оказания Услуг. • Другие. Возможно также использование изображений или других данных, идентификаторы для сбора статистической информации. Использование Вашей личной информации возможно только так, как описано в настоящей Политике конфиденциальности и Политике обработки персональных данных. Защита информации ООО «АЙТИ КРОН» принимает разумные меры, чтобы помочь защитить Вашу личную информацию в целях предотвращения потери, неправильного использования, несанкционированного доступа, раскрытия, изменения и уничтожения. ООО «АЙТИ КРОН» следует общепринятым стандартам для защиты личной информации, как во время передачи, так и при получении. Тем не менее, ни один из методов передачи данных через Интернет, или метод электронного хранения, не являются безопасным, и ООО «АЙТИ КРОН» не может гарантировать абсолютную безопасность. Жалобы. Если у Вас есть жалобы о нарушении конфиденциальности данных, пожалуйста, свяжитесь с ООО «АЙТИ КРОН» по электронной почте по адресу: hello@it-cron.ru</string>
    <string name="text_ok_button">OK</string>
    <string name="text_download_photo">Фотография</string>
    <string name="text_download_document">Документ</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_ups">Упс!</string>
    <string name="text_error_file_size">Файл не должен\nпревышать 15 mb</string>
    <string name="text_repeat_download">Попробуем еще раз?</string>
    <string name="text_went_wrong">Что-то пошло не так...</string>
    <string name="text_repeat">Попробуем еще раз?\nИли позвоните нам.</string>
    <string name="text_thanks_form">Спасибо\nза вашу заявку!</string>
    <string name="text_will_contact_you">Мы свяжемся с Вами\nв ближайшее время.</string>
    <string name="text_call_for_call">А если у Вас «горит» и ждать\nнельзя, скорее звоните нам.</string>
</resources>