<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_transparent"
    android:backgroundTint="@color/color_transparent"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingBottom="5dp">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_download_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_btn_download_image"
        android:fontFamily="@font/gothampro"
        android:letterSpacing="0.02"
        android:paddingVertical="17dp"
        android:text="@string/text_download_photo"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/color_main"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_line_dialog_download"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_download_photo" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_download_document"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_btn_download_document"
        android:fontFamily="@font/gothampro"
        android:letterSpacing="0.02"
        android:paddingVertical="17dp"
        android:text="@string/text_download_document"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/color_main"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/background_btn_download_cancel"
        android:fontFamily="@font/gothampro"
        android:letterSpacing="0.02"
        android:text="@string/text_cancel"
        android:textAllCaps="false"
        android:textColor="@color/color_main_second"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_download_document" />

</LinearLayout>